<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.home.order.OrderActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cdTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="12dp"
        android:padding="4dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tlOrder"
            style="@style/Widget.Design.TabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/bg_tabs"
            app:tabIndicator="@drawable/bg_tabs"
            app:tabRippleColor="@null">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tiCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tiDeli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tiPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment" />
        </com.google.android.material.tabs.TabLayout>
    </androidx.cardview.widget.CardView>

    <fragment
        android:id="@+id/fragment5"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/butConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cdTabs"
        app:navGraph="@navigation/nav_order" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/butConfirm"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="2dp"
        android:text="@string/confirm"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/butClear"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/butClear"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="12dp"
        android:text="@string/clear"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/butConfirm" />

</androidx.constraintlayout.widget.ConstraintLayout>